# TomatoReviewer

./: .gitignore  Makefile  README.md  README.zh.md  pyproject.toml  requirements.txt  setup.py  tomato.yaml  update.sh
ShowcaseCodeFix/: complex_comprehension.md  complex_math_arguments.py  line_too_long.md  missing_return.md  mixed_issues.md  mixed_issues.py  too_many_locals.md  undefined_variables.md  undefined_variables.py  unused_imports.md  unused_imports.py  unused_variables.md
ShowcaseCodeReview/: bad_naming.md  bad_naming.py  complex_comprehension.py  complex_math_arguments.md  line_too_long.py  logger_fstring.md  logger_fstring.py  missing_annotations.md  missing_annotations.py  missing_docstrings.md  missing_docstrings.py  missing_return.py  too_many_arguments.md  too_many_arguments.py  too_many_locals.py  type_mismatch.md  type_mismatch.py  unused_variables.py  wildcard_import.md  wildcard_import.py
ShowcaseCodeReview/reviews/: bad_naming.py-report.md  complex_comprehension.py-report.md  complex_math_arguments.py-report.md  line_too_long.py-report.md  logger_fstring.py-report.md  missing_annotations.py-report.md  missing_docstrings.py-report.md  missing_return.py-report.md  mixed_issues.py-report.md  too_many_arguments.py-report.md  too_many_locals.py-report.md  type_mismatch.py-report.md  undefined_variables.py-report.md  unused_imports.py-report.md  unused_variables.py-report.md  wildcard_import.py-report.md
scripts/: update_files.py
tomato_review/: .mypy.ini  .pylintrc  __init__.py  cli.py  config.py  kb_utils.py  pretty_printing.py
tomato_review/agent/: __init__.py  fixer.py  reviewer.py  searcher.py  session.py  utils.py
tomato_review/pep_kb/: get_pep_index.py  helper_funcs.py  pep_knowledge_base.py  pep_models.py  pep_processor.py
